--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +54 221 675 4321</p>
-<p>Email: galovalsangia@gmail.com</p>
+<p>Tel: 65 675 4321</p>
+<p>Email: gblabla@gmail.com</p>
 <p>Address:</p>
 <p>
   123 North Street<br />
-  La Plata<br />
-  Argentina <br />
+  Who<br />
+  knows <br />
 </p>
